<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:background="#FFCC00"
        android:gravity="center"
        android:padding="5dp"
        android:text="DASH BOARD"
        android:textAllCaps="true"
        android:textColor="#AD4632"
        android:textStyle="bold" />


    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_weight="0.1"-->
        <!--android:background="@color/white"-->
        <!--android:gravity="center"-->
        <!--android:padding="5dp"-->
        <!--android:text="Total Records 0"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:textStyle="bold" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@mipmap/one"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/total_wage_seekers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="0"
                    android:textColor="#FFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@mipmap/two"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/total_areas_worked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="0"
                    android:textColor="#FFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@mipmap/four"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/total_jobseeker_sync_records"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="0"
                    android:textColor="#FFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@mipmap/four"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/total_worksite_sync_records"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="0"
                    android:textColor="#FFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>





        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@mipmap/threee"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/total_jobseeker_unsync_records"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="0"
                    android:textColor="#FFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@mipmap/threee"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/total_worksite_unsync_records"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="0"
                    android:textColor="#FFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <Button
                android:id="@+id/upload_csv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/upload_csv"
                android:background="#b43c32"
                android:textColor="#fff"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/start_audit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/start_Audit"
                android:background="#b43c32"
                android:textColor="#fff"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <!--<ImageView
            android:id="@+id/img_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/upload" />-->

    </LinearLayout>
    <TextView
        android:id="@+id/btnLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/company_Name"
        android:textColor="@color/white" />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:weightSum="1">

        <TextView
            android:id="@+id/txt_audit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_fill_audit"
            android:gravity="center"
            android:padding="10dp"
            android:text="Start Audit"
            android:textColor="#fff" />

    </LinearLayout>-->
</LinearLayout>
